--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -31,10 +31,64 @@ font & reset css
 reset
 --------------------------------------------- 
 */
-html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, div
-pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q,
-s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li,
-figure, header, nav, section, article, aside, footer, figcaption {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+div pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+font,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+figure,
+header,
+nav,
+section,
+article,
+aside,
+footer,
+figcaption {
   margin: 0;
   padding: 0;
   border: 0;
@@ -62,13 +116,20 @@ html[xmlns] .clearfix {
   height: 1%;
 }
 
-ul, li {
+ul,
+li {
   padding: 0;
   margin: 0;
   list-style: none;
 }
 
-header, nav, section, article, aside, footer, hgroup {
+header,
+nav,
+section,
+article,
+aside,
+footer,
+hgroup {
   display: block;
 }
 
@@ -76,8 +137,9 @@ header, nav, section, article, aside, footer, hgroup {
   box-sizing: border-box;
 }
 
-html, body {
-  font-family: 'Poppins', sans-serif;
+html,
+body {
+  font-family: "Poppins", sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -87,7 +149,12 @@ a {
   text-decoration: none !important;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: #1e1e1e;
   margin-top: 0px;
   margin-bottom: 0px;
@@ -116,7 +183,7 @@ Global Styles
 */
 html,
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 ::selection {
@@ -167,7 +234,7 @@ body {
   line-height: 50px;
   padding: 0px 30px 0px 0px;
   border-radius: 25px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .icon-button a i {
@@ -200,7 +267,7 @@ body {
   line-height: 40px;
   padding: 0px 30px;
   border-radius: 25px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .main-button a:hover {
@@ -220,7 +287,7 @@ Pre-loader Style
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0,0,0,0.99);
+  background-color: rgba(0, 0, 0, 0.99);
   display: -webkit-box;
   display: flex;
   -webkit-box-align: center;
@@ -242,29 +309,29 @@ Pre-loader Style
 
 @-webkit-keyframes dot {
   50% {
-      -webkit-transform: translateX(96px);
-      transform: translateX(96px);
+    -webkit-transform: translateX(96px);
+    transform: translateX(96px);
   }
 }
 
 @keyframes dot {
   50% {
-      -webkit-transform: translateX(96px);
-      transform: translateX(96px);
+    -webkit-transform: translateX(96px);
+    transform: translateX(96px);
   }
 }
 
 @-webkit-keyframes dots {
   50% {
-      -webkit-transform: translateX(-31px);
-      transform: translateX(-31px);
+    -webkit-transform: translateX(-31px);
+    transform: translateX(-31px);
   }
 }
 
 @keyframes dots {
   50% {
-      -webkit-transform: translateX(-31px);
-      transform: translateX(-31px);
+    -webkit-transform: translateX(-31px);
+    transform: translateX(-31px);
   }
 }
 
@@ -308,8 +375,6 @@ Pre-loader Style
   border-radius: 50%;
 }
 
-
-
 /* 
 ---------------------------------------------
 Header Style
@@ -344,7 +409,7 @@ Header Style
   line-height: 30px;
   color: #fff;
   font-size: 14px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .sub-header ul.social-links li a:hover {
@@ -359,12 +424,6 @@ Header Style
   padding-right: 25px;
 }
 
-.sub-header ul.info li:last-child {
-  margin-right: 0px;
-  padding-right: 0px;
-  border-right: none;
-}
-
 .sub-header ul.info li i {
   font-size: 20px;
   color: #f35525;
@@ -373,16 +432,16 @@ Header Style
 
 .background-header {
   background-color: #fff;
-  height: 80px!important;
-  position: fixed!important;
-  top: 0!important;
+  height: 80px !important;
+  position: fixed !important;
+  top: 0 !important;
   left: 0;
   right: 0;
-  box-shadow: 0px 0px 10px rgba(0,0,0,0.15)!important;
-  -webkit-transition: all .5s ease 0s;
-  -moz-transition: all .5s ease 0s;
-  -o-transition: all .5s ease 0s;
-  transition: all .5s ease 0s;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15) !important;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header-area {
@@ -390,10 +449,10 @@ Header Style
   background-color: #fff;
   height: 100px;
   z-index: 100;
-  -webkit-transition: all .5s ease 0s;
-  -moz-transition: all .5s ease 0s;
-  -o-transition: all .5s ease 0s;
-  transition: all .5s ease 0s;
+  -webkit-transition: all 0.5s ease 0s;
+  -moz-transition: all 0.5s ease 0s;
+  -o-transition: all 0.5s ease 0s;
+  transition: all 0.5s ease 0s;
 }
 
 .header-area .main-nav {
@@ -434,10 +493,6 @@ Header Style
   z-index: 999;
 }
 
-.header-area .main-nav .nav li:last-child {
-  padding-right: 0px;
-}
-
 .header-area .main-nav .nav li {
   padding-left: 10px;
   padding-right: 10px;
@@ -460,37 +515,7 @@ Header Style
   -o-transition: all 0.4s ease 0s;
   transition: all 0.4s ease 0s;
   border: transparent;
-  letter-spacing: .25px;
-}
-
-.header-area .main-nav .nav li:last-child a {
-  background-color: #1e1e1e;
-  color: #fff;
-  font-size: 14px;
-  font-weight: 400;
-  text-transform: none;
-  border-radius: 20px;
-  padding-left: 0px;
-}
-
-.header-area .main-nav .nav li:last-child a i {
-  background-color: #f35525;
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  text-align: center;
-  line-height: 40px;
-  margin-right: 10px;
-  border-radius: 50%;
-  margin-left: -1px;
-}
-
-.header-area .main-nav .nav li:last-child:hover a {
-  background-color: #1e1e1e;
-}
-
-.header-area .main-nav .nav li:last-child:hover a i {
-  color: #fff;
+  letter-spacing: 0.25px;
 }
 
 .header-area .main-nav .nav li:hover a {
@@ -500,7 +525,6 @@ Header Style
 .header-area .main-nav .nav li a.active {
   color: #f35525;
 }
-
 
 .background-header .main-nav .nav li a.active {
   color: #f35525;
@@ -613,8 +637,8 @@ Header Style
   background-color: #1e1e1e;
 }
 
-.visible{
-  display:inline !important;
+.visible {
+  display: inline !important;
 }
 
 @media (max-width: 1200px) {
@@ -622,7 +646,6 @@ Header Style
     padding-left: 5px;
     padding-right: 5px;
   }
-
 }
 
 @media (max-width: 767px) {
@@ -642,7 +665,7 @@ Header Style
     font-weight: 400;
     color: #1e1e1e;
     background-color: #fff;
-     border-radius: 0px 0px 25px 25px;
+    border-radius: 0px 0px 25px 25px;
   }
   .background-header .main-nav .nav li,
   .header-area .main-nav .nav li {
@@ -673,16 +696,11 @@ Header Style
   }
   .header-area.header-sticky .nav li a:hover,
   .header-area.header-sticky .nav li a.active {
-    color: #ee626b!important;
+    color: #ee626b !important;
     opacity: 1;
   }
   .header-area.header-sticky .nav li.search-icon a {
     width: 100%;
-  }
-  .header-area .nav li:last-child a {
-    background-color: transparent !important;
-    font-weight: 300 !important;
-    text-transform: capitalize !important;
   }
   .header-area {
     padding: 0px 15px;
@@ -727,7 +745,6 @@ Header Style
     padding-left: 0px !important;
     padding-right: 0px !important;
   }
-  
 }
 
 /* 
@@ -794,7 +811,7 @@ Banner Style
   background-color: #fff;
   border-radius: 50%;
   margin-right: 10px;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .main-banner .owl-dots .active {
@@ -819,7 +836,7 @@ Banner Style
   background-color: rgba(255, 255, 255, 0.2);
   border-radius: 50%;
   opacity: 1;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .main-banner .owl-nav .owl-prev i {
@@ -837,8 +854,6 @@ Banner Style
   opacity: 1;
   background-color: rgba(255, 255, 255, 0.5);
 }
-
-
 
 /* 
 ---------------------------------------------
@@ -912,10 +927,6 @@ Featured Style
   border-bottom: none;
 }
 
-.featured .accordion-item:last-of-type .accordion-collapse {
-  border-top: 1px solid #eaeaea;
-}
-
 .featured .info-table {
   border-radius: 10px;
   box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
@@ -927,12 +938,6 @@ Featured Style
   margin-bottom: 35px;
   padding-bottom: 35px;
   border-bottom: 1px solid #eee;
-}
-
-.featured .info-table ul li:last-child {
-  border-bottom: none;
-  padding-bottom: 0;
-  margin-bottom: 0;
 }
 
 .featured .info-table ul li img {
@@ -1047,11 +1052,10 @@ Fun Facts Style
   height: 50px;
   background-color: #f35525;
   border-radius: 50%;
-  content: '';
+  content: "";
   right: -25px;
   top: -25px;
 }
-
 
 /* 
 ---------------------------------------------
@@ -1116,12 +1120,6 @@ Best Deal Style
   font-weight: 400;
 }
 
-.best-deal .info-table ul li:last-child {
-  border-bottom: none;
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
-
 .best-deal .info-table ul li span {
   font-size: 20px;
   color: #1e1e1e;
@@ -1144,7 +1142,6 @@ Best Deal Style
 .best-deal .icon-button {
   margin-top: 30px;
 }
-
 
 /* 
 ---------------------------------------------
@@ -1213,7 +1210,6 @@ Properties Style
 .properties .item .main-button {
   text-align: center;
 }
-
 
 /* 
 ---------------------------------------------
@@ -1324,13 +1320,12 @@ Contact Style
   border: none;
   font-size: 15px;
   font-weight: 500;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .contact-content #contact-form button:hover {
   background-color: #f35525;
 }
-
 
 /* 
 ---------------------------------------------
@@ -1358,7 +1353,7 @@ footer p {
 
 footer p a {
   color: #fff;
-  transition: all .3s;
+  transition: all 0.3s;
   position: relative;
   z-index: 3;
 }
@@ -1366,7 +1361,6 @@ footer p a {
 footer p a:hover {
   opacity: 0.75;
 }
-
 
 /* 
 ---------------------------------------------
@@ -1405,7 +1399,6 @@ Page Header Style
   color: #fff;
 }
 
-
 /* 
 ---------------------------------------------
 Properties Style
@@ -1433,7 +1426,7 @@ Properties Style
   background-color: #1e1e1e;
   padding: 12px 25px;
   border-radius: 5px;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .properties ul.properties-filter li a.is_active {
@@ -1472,7 +1465,7 @@ Properties Style
   font-size: 15px;
   font-weight: 600;
   border-radius: 50%;
-  transition: all .3s;
+  transition: all 0.3s;
 }
 
 .properties ul.pagination li a:hover,
@@ -1480,7 +1473,6 @@ Properties Style
   background-color: #f35525;
   color: #fff;
 }
-
 
 /* 
 ---------------------------------------------
@@ -1565,12 +1557,6 @@ Single Page Style
   border-bottom: 1px solid #eee;
 }
 
-.single-property .info-table ul li:last-child {
-  border-bottom: none;
-  padding-bottom: 0;
-  margin-bottom: 0;
-}
-
 .single-property .info-table ul li img {
   float: left;
   margin-right: 25px;
@@ -1586,7 +1572,6 @@ Single Page Style
   color: #aaa;
   font-weight: 400;
 }
-
 
 /* 
 ---------------------------------------------
@@ -1684,13 +1669,12 @@ Contact Page Style
   border: none;
   font-size: 15px;
   font-weight: 500;
-  transition: all .5s;
+  transition: all 0.5s;
 }
 
 .contact-page #contact-form button:hover {
   background-color: #f35525;
 }
-
 
 /* 
 ---------------------------------------------
@@ -1722,9 +1706,6 @@ body {
   .properties ul.properties-filter li {
     margin: 5px;
   }
-  .header-area .main-nav .nav li:last-child {
-    display: none;
-  }
 }
 
 @media (max-width: 992px) {
@@ -1740,9 +1721,6 @@ body {
   .header-area .main-nav .nav li a {
     padding-left: 3px;
     padding-right: 3px;
-  }
-  .header-area .main-nav .nav li:last-child a {
-    padding-right: 15px;
   }
   .main-banner .item h2 {
     width: 100%;
