home page content 2

--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -783,6 +783,10 @@ Banner Style
     background-image: url(../images/banner-03.jpg);
 }
 
+.main-banner .item-4 {
+    background-image: url(../images/banner-01.jpg);
+}
+
 .main-banner .item span.category {
     background-color: #fff;
     color: #1e1e1e;
