--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -180,6 +180,13 @@ img {
     overflow: hidden;
 }
 
+p,
+ul,
+li {
+    font-family: "Poppins", sans-serif;
+    font-size: 14px;
+}
+
 
 /* 
 ---------------------------------------------
@@ -772,19 +779,19 @@ Banner Style
 }
 
 .main-banner .item-1 {
-    background-image: url(../images/banner-01.jpg);
+    background-image: url(../images/agro-slider-1.jpeg);
 }
 
 .main-banner .item-2 {
-    background-image: url(../images/banner-02.jpg);
+    background-image: url(../images/pharma-slider-1.jpeg);
 }
 
 .main-banner .item-3 {
-    background-image: url(../images/banner-03.jpg);
+    background-image: url(../images/surfacant-slider-1.jpeg);
 }
 
 .main-banner .item-4 {
-    background-image: url(../images/banner-01.jpg);
+    background-image: url(../images/export-slider-1.jpg);
 }
 
 .main-banner .item span.category {
@@ -1504,12 +1511,83 @@ Properties Style
 
 /* 
 ---------------------------------------------
+Product Based Style
+--------------------------------------------- 
+*/
+
+.witemshny-main {
+    background: var(--bg-color);
+}
+
+.weitemshny-grid a.zoom {
+    overflow: hidden;
+    border-radius: var(--border-radius);
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.weitemshny-grid a.zoom img {
+    transition: 0.3s ease-in-out;
+    border-radius: var(--border-radius);
+}
+
+.weitemshny-grid:hover img {
+    overflow: hidden;
+    transform: scale(1.1);
+    transition: 0.3s ease-in-out;
+    border-radius: var(--border-radius);
+}
+
+.weitemshny-grid img.news-image {
+    border-radius: var(--border-radius);
+}
+
+.weitemshny-grid .w3-grids3-info {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    display: grid;
+    align-content: center;
+    overflow: hidden;
+    padding: 3em;
+    background-color: rgb(0 0 0 / 35%);
+    border-radius: var(--border-radius);
+    width: 100%;
+    height: auto;
+    margin: 0 auto;
+}
+
+.product-incfhny h4 a {
+    font-size: 20px;
+    line-height: 26px;
+    font-weight: 700;
+    display: block;
+    color: var(--heading-color);
+    text-align: left;
+}
+
+.product-incfhny h4 a:hover {
+    color: var(--primary-color);
+    transition: .3s ease;
+    -webkit-transition: .3s ease;
+    -moz-transition: .3s ease;
+    -ms-transition: .3s ease;
+    -o-transition: .3s ease;
+}
+
+
+/* 
+---------------------------------------------
 Single Page Style
 --------------------------------------------- 
 */
 
 .single-property .main-image img {
     float: none;
+    align-content: center;
 }
 
 .single-property .main-content h4 {
