--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -904,6 +904,27 @@ Featured Style
     bottom: -55px;
 }
 
+.featured .right-image {
+    position: relative;
+}
+
+.featured .right-image img {
+    padding-left: 55px;
+}
+
+.featured .right-image a {
+    display: inline-block;
+    width: 110px;
+    height: 110px;
+    line-height: 110px;
+    background-color: #f35525;
+    border-radius: 50%;
+    text-align: center;
+    position: absolute;
+    left: 0;
+    bottom: -55px;
+}
+
 .featured .section-heading {
     margin-left: 10px;
     margin-right: 10px;
