--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -187,6 +187,42 @@ li {
     font-size: 14px;
 }
 
+.custom-bullet-list {
+    list-style-type: none;
+    padding-left: 0;
+}
+
+.custom-bullet-list li {
+    position: relative;
+    padding-left: 30px;
+    margin-bottom: 10px;
+}
+
+.custom-bullet-list li::before {
+    content: "\2022";
+    color: #f35525;
+    font-weight: bold;
+    font-size: 20px;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.col-left,
+.col-right {
+    width: 48%;
+}
+
+.plus-sign {
+    color: #f35525;
+    font-size: 36px;
+    font-weight: bold;
+    margin-left: -25px;
+    margin-right: 10px;
+    vertical-align: middle;
+}
+
 
 /* 
 ---------------------------------------------
@@ -481,6 +517,7 @@ Header Style
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
     display: inline-block;
+    margin-left: -20px;
 }
 
 .header-area .main-nav .logo h1 {
@@ -490,7 +527,12 @@ Header Style
     color: #1e1e1e;
     font-weight: 700;
     letter-spacing: 0px;
-    margin-top: 15px;
+    margin-top: 20px;
+    margin-left: -20px;
+}
+
+.header-area .main-nav .logo .h1 .custom-logo {
+    margin-left: -20px;
 }
 
 .background-header .main-nav .logo h1 {
@@ -510,16 +552,16 @@ Header Style
 }
 
 .header-area .main-nav .nav li {
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 5px;
+    padding-right: 5px;
     height: 100px;
     line-height: 100px;
 }
 
 .header-area .main-nav .nav li a {
     display: block;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 5px;
+    padding-right: 5px;
     font-weight: 500;
     font-size: 15px;
     height: 40px;
@@ -771,11 +813,26 @@ Banner Style
 */
 
 .main-banner .item {
+    position: relative;
+    /* Required for the overlay positioning */
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
     padding: 220px 20% 320px 20%;
     margin-top: 0px;
+}
+
+.main-banner .item::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Adjust the last value (opacity) to control the dimming effect */
+    z-index: 1;
+    /* Ensure the overlay is above the background image */
 }
 
 .main-banner .item-1 {
@@ -792,6 +849,12 @@ Banner Style
 
 .main-banner .item-4 {
     background-image: url(../images/export-slider-1.jpg);
+}
+
+.main-banner .header-text {
+    position: relative;
+    z-index: 2;
+    /* Ensure the text is above the overlay */
 }
 
 .main-banner .item span.category {
@@ -843,7 +906,7 @@ Banner Style
     position: absolute;
     top: 50%;
     width: 100%;
-    transform: translateY(-50px);
+    transform: translateY(-50%);
 }
 
 .main-banner .owl-nav .owl-prev i,
@@ -1447,6 +1510,251 @@ Page Header Style
 }
 
 .page-heading h3 {
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.page-heading-main {
+    background-image: url(../images/main-main-banner.jpg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 110px 0px;
+    text-align: center;
+    position: relative;
+}
+
+.page-heading-main::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.page-heading-main span,
+.page-heading-main h3 {
+    position: relative;
+    z-index: 2;
+}
+
+.page-heading-main span {
+    background-color: #fff;
+    color: #1e1e1e;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 10px 25px;
+    display: inline-block;
+    margin-bottom: 30px;
+}
+
+.page-heading-main span a {
+    color: #1e1e1e;
+}
+
+.page-heading-main h3 {
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.page-heading-pharma {
+    background-image: url(../images/pharma-banner-main.jpeg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 110px 0px;
+    text-align: center;
+    position: relative;
+}
+
+.page-heading-pharma::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.page-heading-pharma span,
+.page-heading-pharma h3 {
+    position: relative;
+    z-index: 2;
+}
+
+.page-heading-pharma span {
+    background-color: #fff;
+    color: #1e1e1e;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 10px 25px;
+    display: inline-block;
+    margin-bottom: 30px;
+}
+
+.page-heading-pharma span a {
+    color: #1e1e1e;
+}
+
+.page-heading-pharma h3 {
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.page-heading-agro {
+    background-image: url(../images/agro-banner-main.jpeg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 110px 0px;
+    text-align: center;
+    position: relative;
+}
+
+.page-heading-agro::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.page-heading-agro span,
+.page-heading-agro h3 {
+    position: relative;
+    z-index: 2;
+}
+
+.page-heading-agro span {
+    background-color: #fff;
+    color: #1e1e1e;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 10px 25px;
+    display: inline-block;
+    margin-bottom: 30px;
+}
+
+.page-heading-agro span a {
+    color: #1e1e1e;
+}
+
+.page-heading-agro h3 {
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.page-heading-surf {
+    background-image: url(../images/surfactant-banner-main.jpeg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 110px 0px;
+    text-align: center;
+    position: relative;
+}
+
+.page-heading-surf::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.page-heading-surf span,
+.page-heading-surf h3 {
+    position: relative;
+    z-index: 2;
+}
+
+.page-heading-surf span {
+    background-color: #fff;
+    color: #1e1e1e;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 10px 25px;
+    display: inline-block;
+    margin-bottom: 30px;
+}
+
+.page-heading-surf span a {
+    color: #1e1e1e;
+}
+
+.page-heading-surf h3 {
+    font-size: 48px;
+    font-weight: 900;
+    text-transform: uppercase;
+    color: #fff;
+}
+
+.page-heading-exp {
+    background-image: url(../images/export-banner-main.jpg);
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 110px 0px;
+    text-align: center;
+    position: relative;
+}
+
+.page-heading-exp::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+}
+
+.page-heading-exp span,
+.page-heading-exp h3 {
+    position: relative;
+    z-index: 2;
+}
+
+.page-heading-exp span {
+    background-color: #fff;
+    color: #1e1e1e;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 10px 25px;
+    display: inline-block;
+    margin-bottom: 30px;
+}
+
+.page-heading-exp span a {
+    color: #1e1e1e;
+}
+
+.page-heading-exp h3 {
     font-size: 48px;
     font-weight: 900;
     text-transform: uppercase;
