--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -517,7 +517,6 @@ Header Style
     -o-transition: all 0.3s ease 0s;
     transition: all 0.3s ease 0s;
     display: inline-block;
-    margin-left: -20px;
 }
 
 .header-area .main-nav .logo h1 {
@@ -528,11 +527,6 @@ Header Style
     font-weight: 700;
     letter-spacing: 0px;
     margin-top: 20px;
-    margin-left: -20px;
-}
-
-.header-area .main-nav .logo .h1 .custom-logo {
-    margin-left: -20px;
 }
 
 .background-header .main-nav .logo h1 {
@@ -1442,6 +1436,114 @@ Contact Style
     background-color: #f35525;
 }
 
+.alert {
+    position: relative;
+    padding: 1rem 1rem;
+    margin-bottom: 1rem;
+    border: 1px solid transparent;
+    border-radius: .25rem
+}
+
+.alert-heading {
+    color: inherit
+}
+
+.alert-link {
+    font-weight: 700
+}
+
+.alert-dismissible {
+    padding-right: 3rem
+}
+
+.alert-dismissible .btn-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    padding: 1.25rem 1rem
+}
+
+.alert-primary {
+    color: #084298;
+    background-color: #cfe2ff;
+    border-color: #b6d4fe
+}
+
+.alert-primary .alert-link {
+    color: #06357a
+}
+
+.alert-secondary {
+    color: #41464b;
+    background-color: #e2e3e5;
+    border-color: #d3d6d8
+}
+
+.alert-secondary .alert-link {
+    color: #34383c
+}
+
+.alert-success {
+    color: #0f5132;
+    background-color: #d1e7dd;
+    border-color: #badbcc
+}
+
+.alert-success .alert-link {
+    color: #0c4128
+}
+
+.alert-info {
+    color: #055160;
+    background-color: #cff4fc;
+    border-color: #b6effb
+}
+
+.alert-info .alert-link {
+    color: #04414d
+}
+
+.alert-warning {
+    color: #664d03;
+    background-color: #fff3cd;
+    border-color: #ffecb5
+}
+
+.alert-warning .alert-link {
+    color: #523e02
+}
+
+.alert-danger {
+    color: #842029;
+    background-color: #f8d7da;
+    border-color: #f5c2c7
+}
+
+.alert-danger .alert-link {
+    color: #6a1a21
+}
+
+.alert-light {
+    color: #636464;
+    background-color: #fefefe;
+    border-color: #fdfdfe
+}
+
+.alert-light .alert-link {
+    color: #4f5050
+}
+
+.alert-dark {
+    color: #141619;
+    background-color: #d3d3d4;
+    border-color: #bcbebf
+}
+
+.alert-dark .alert-link {
+    color: #101214
+}
+
 
 /* 
 ---------------------------------------------
@@ -2123,6 +2225,24 @@ body {
     overflow-x: hidden;
 }
 
+.team-names {
+    text-align: center;
+}
+
+.team-designations {
+    text-align: center;
+    color: #f35525;
+    padding-bottom: 10px;
+}
+
+.quote-pics {
+    align-items: center;
+    justify-content: center;
+    padding-left: 25px;
+    padding-right: 25px;
+    height: 400px;
+}
+
 @media (max-width: 767px) {
     .header-area .main-nav .logo h1 {
         line-height: 80px !important;
@@ -2142,6 +2262,14 @@ body {
     }
     .properties ul.properties-filter li {
         margin: 5px;
+    }
+    .careers {
+        padding-top: 25px;
+        padding-bottom: 25px;
+    }
+    .team {
+        padding-top: 15px;
+        padding-bottom: 15px;
     }
 }
 
